--- a/contracts/foundry.toml
+++ b/contracts/foundry.toml
@@ -1,2 +1,11 @@
+[profile.default]
+src = "src"
+out = "out"
+libs = ["lib"]
+
+remappings = [
+    "@openzeppelin/=lib/openzeppelin-contracts/"
+]
+
 [profile.ci.fuzz]
 runs = 10_000
